--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 # data science and numerical computing
 numpy
+matplotlib
 scipy
 scikit-learn
 ftfy==5.1
@@ -8,6 +9,7 @@ pandas
 ipython
 
 # pytorch libraries
+tensorboardX
 torch==1.5.0
-torchvision
+torchvision==0.6.0
 transformers==2.4.1
